intTests/test_type_errors/err014.log.good
Loading file "err014.saw"
Type errors:
  err014.saw:12:15-12:18: Error: Record field names do not match.
    Expected: { a : Int }
    Found:    { b : Int }

  err014.saw:8:13-8:24: Note: The type { a : Int } arises from this type annotation
  err014.saw:10:25-10:34: Note: The type { b : Int } arises from the type of this term


FAILED
